stylesheets/education.css
img {
  text-align: center;
  display: block;
  height: 350px;
  width: 700px;
}

* {
  background-color: black;
}

.center {
  text-align: center;
  padding-bottom: 50px;
  color: white;
  font-family: 'Lobster', cursive;
  text-decoration: none;
}

h3 {
  text-align: center;
  color: white;
}

